--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,7 @@ h1 {
 }
 
 button {
+  padding: 1rem 1rem 1rem 1rem;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -90,4 +91,10 @@ html, body {
 
 html {
   scroll-behavior: smooth;
+}
+
+.header-container {
+  max-width: 900px !important;
+  width: 900px !important;
+  min-width: 900px !important;
 }
